[project]
name = "airline"
version = "0.1.0"
description = ""
authors = [
    {name = "talha309",email = "tiseoexpert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents (>=0.0.17,<0.0.18)",
    "pydantic (>=2.11.6,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
